# fluxbee

./: .gitignore  Cargo.toml  DEVELOPMENT.md  README.md  README_1.md  fluxbee  wf-rules-quickstart.md
.github/workflows/: admin-catalog-guard.yml
config/: hive.yaml  island.yaml
crates/fluxbee_ai_nodes/: Cargo.toml
crates/fluxbee_ai_sdk/: Cargo.toml  README.md
crates/fluxbee_ai_sdk/src/: agent.rs  errors.rs  function_calling.rs  immediate_memory.rs  lib.rs  llm.rs  message.rs  node_trait.rs  output.rs  router_client.rs  runtime.rs  summary_refresh.rs  text_payload.rs  thread_state.rs  thread_state_tools.rs
crates/fluxbee_ai_sdk/tests/: agent_tools.rs  contracts.rs  immediate_memory.rs  mock_llm.rs  summary_refresh.rs  thread_state_isolation.rs  thread_state_tools.rs
crates/fluxbee_sdk/: Cargo.toml
crates/fluxbee_sdk/src/: admin.rs  cognition.rs  identity.rs  lib.rs  managed_node.rs  nats.rs  node_client.rs  node_client_stub.rs  node_config.rs  node_secret.rs  payload.rs  policy.rs  prelude.rs  protocol.rs  send_normalization.rs  split.rs  status.rs  thread.rs  timer.rs
crates/fluxbee_sdk/src/blob/: mod.rs
crates/fluxbee_sdk/src/comm/: mod.rs
crates/fluxbee_sdk/src/socket/: connection.rs
crates/jsr_client/: Cargo.toml  README.md
crates/jsr_client/src/: client_config.rs  lib.rs  nats.rs  node_client.rs  protocol.rs  split.rs
crates/jsr_client/src/socket/: connection.rs
docs/: 01-arquitectura.md  02-protocolo.md  03-shm.md  04-routing.md  05-conectividad.md  06-config-shm.md  06-regiones.md  07-operaciones.md  08-apendices.md  09-router-status.md  10-identity-layer3.md  10-identity-v2.md  10-opa-pendientes.md  11-context.md  12-cognition-v1.md  12-cognition-v2.md  12-cognition.md  13-storage.md  14-runtime-rollout-motherbee.md  AI_Nodes_SDK_Spec_v1.md  AI_nodes_spec.md  JSON Router v1.0 - Especificación Técnica.md  Roadmap v1.0.md  SY nodes spec v1.md  SY nodes spec.md  SY_nodes_spec.md  admin-internal-gateway-spec.md  ai-frontdesk-gov-spec.md  ai-nodes-deploy-runbook.md  ai-nodes-examples-annex.md  ai_frontdesk_gov.example.yaml  blob-annex-spec.md  executor_manifest_pilot_spec.md  immediate-conversation-memory-spec.md  node-config-control-plane-spec.md  node-package-install-spec-TODO.md  node-spawn-config-spec.md  runtime-lifecycle-spec.md  runtime-packaging-cli-spec.md  scope-binding-energy-spec.md  (+9 more)
docs/TODO/: fluxbee_identity_claims_normative_model.md  policy_solution_integration_tasks.md  solution-manifest-spec_1.md  sy-policy-beta.md  sy-policy-decision-note_1.md  system_node_action_catalogs.md  system_nodes_sdk_alignment_plan.md
docs/examples/: ai_common_chat.config.json  ai_frontdesk_gov.config.json
docs/fluxbee_ai_sdk/: Cargo.toml
docs/future_implementations/: 10-identity-v3.md  (+3 more)
examples/: node_test.rs  timer_client.rs  timer_recurring.rs  timer_restart.rs  wf_client.rs
fluxbee-go-sdk/: README.md  client.go  client_test.go  help.go  identity.go  identity_linux.go  identity_other.go  identity_test.go  nodeconfig_test.go  protocol.go  protocol_test.go  socket.go  timer_client.go  timer_client_test.go  timer_schedule.go  timer_test.go  timer_time.go  timer_wire_test.go
io/: Cargo.toml  MIGRATION_NOTES.md  README.md
io/legacy/crates/node-test/: Cargo.toml
io/legacy/crates/node-test/src/: main.rs
io/legacy/crates/router-client/: Cargo.toml
io/legacy/crates/router-client/examples/: smoke.rs
io/legacy/crates/router-client/src/: framing.rs  handshake.rs  lib.rs
node-lib/: Cargo.toml
nodes/gov/ai-frontdesk-gov/: Cargo.toml  README.md
nodes/gov/ai-frontdesk-gov/src/: main.rs
nodes/io/: Cargo.toml  MIGRATION_NOTES.md  README.md
nodes/io/common/: Cargo.toml
nodes/io/common/src/: frontdesk_contract.rs  identity.rs  inbound.rs  io_adapter_config.rs  io_api_adapter_config.rs  io_context.rs  io_control_plane.rs  io_control_plane_bootstrap.rs  io_control_plane_logging.rs  io_control_plane_metrics.rs  io_control_plane_store.rs  io_linkedhelper_adapter_config.rs  io_slack_adapter_config.rs  lib.rs  provision.rs  relay.rs  reliability.rs  router_message.rs  text_v1_blob.rs
nodes/io/io-api/: Cargo.toml
nodes/io/io-api/src/: attachments.rs  auth.rs  config.rs  http.rs  main.rs  schema.rs  subject.rs  webhook.rs
nodes/io/io-linkedhelper/: Cargo.toml
nodes/io/io-linkedhelper/src/: main.rs  schema.rs  state_store.rs
nodes/io/io-sim/: Cargo.toml
nodes/io/io-sim/src/: main.rs
nodes/io/io-slack/: Cargo.toml
nodes/io/io-slack/src/: main.rs
nodes/test/io-test/: Cargo.toml
nodes/test/io-test/src/: main.rs
sandbox/: island.yaml
scripts/: admin_action_catalog_parity_check.sh  admin_add_hive_matrix.sh  admin_all_actions_matrix_e2e.sh  admin_http_socket_parity_e2e.sh  admin_internal_hive_id_selector_e2e.sh  admin_internal_inventory_socket_e2e.sh  admin_internal_no_legacy_e2e.sh  admin_internal_node_name_precedence_e2e.sh  admin_internal_socket_actions_e2e.sh  admin_internal_target_required_e2e.sh  admin_list_actions_e2e.sh  admin_nodes_routers_storage_e2e.sh  admin_runtime_delete_e2e.sh  admin_wan_integration_suite.sh  admin_wan_stale_recovery_e2e.sh  ai-nodectl.sh  blob_sync_e2e.sh  blob_sync_multi_hive_e2e.sh  check_no_jsr_client_usage.sh  cognition_e2e_smoke.sh  custom_node_reboot_reconcile_e2e.sh  deploy-ia-node.sh  deploy-io-api.sh  deploy-io-slack.sh  executor_manifest_pilot_e2e.sh  fluxbee_stop.sh  gov_frontdesk_identity_e2e.sh  identity_merge_alias_e2e.sh  identity_negative_e2e.sh  identity_node_registration_e2e.sh  identity_provision_complete_e2e.sh  identity_register_strict_e2e.sh  identity_replica_sync_e2e.sh  identity_test_nodes_publish_e2e.sh  install-ia.sh  install-io-api.sh  install-io.sh  install.sh  install_sandbox.sh  inventory_add_remove_hive_e2e.sh  (+52 more)
src/: config.rs  config_shm.rs  lib.rs  main.rs  opa.rs  paths.rs  runtime_manifest.rs  runtime_package.rs
sy-opa-rules/: go.mod  main.go  main_stub.go  main_test.go  sy-opa-rules
sy-timer/: go.mod  handlers_linux_test.go  main.go  persistence.go  persistence_test.go  s11_scheduler_linux_test.go  scheduler.go  scheduler_linux_test.go  shared.go
(+355 files in other folders)
