[package]
name = "json-router"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "crates/fluxbee_sdk",
    "crates/fluxbee_ai_sdk",
    "nodes/gov/common",
    "nodes/gov/ai-frontdesk-gov",
    "nodes/test/io-test",
    "nodes/test/ai-test-gov",
]

[dependencies]
async-trait = "0.1"
tokio = { version = "1.37", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
uuid = { version = "1.7", features = ["v4", "serde"] }
memmap2 = "0.9"
nix = { version = "0.28", features = ["fs", "mman"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
fluxbee-sdk = { path = "crates/fluxbee_sdk" }
fluxbee-ai-sdk = { path = "crates/fluxbee_ai_sdk" }
wasmtime = "19.0.0"
regex = "1.10"
tar = "0.4"
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
sha2 = "0.10"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
lancedb = "0.27.1"
arrow-array = "57.2"
arrow-schema = "57.2"
futures = "0.3"
