[package]
name = "node-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
uuid = { version = "1.19.0", features = ["v4", "serde"] }
