[package]
name = "fluxbee-ai-nodes"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
fluxbee-ai-sdk = { path = "../fluxbee_ai_sdk" }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1.37", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
