[package]
name = "fluxbee-ai-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
fluxbee-sdk = { path = "../fluxbee_sdk" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.37", features = ["rt", "macros"] }
tracing = "0.1"
