[package]
name = "fluxbee-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
uuid = { version = "1.7", features = ["v4", "serde"] }
thiserror = "1.0"
tracing = "0.1"
sha2 = "0.10"
mime_guess = "2.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
