[package]
name = "jsr-client"
version = "0.1.0"
edition = "2021"
description = "DEPRECATED legacy Fluxbee client crate (use fluxbee-sdk)"
readme = "README.md"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
uuid = { version = "1.7", features = ["v4", "serde"] }
thiserror = "1.0"
tracing = "0.1"
