[package]
name = "ai-frontdesk-gov"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = "1.0"
fluxbee-sdk = { path = "../../../crates/fluxbee_sdk" }
gov-common = { path = "../common" }
