[package]
name = "io-linkedhelper"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono = { version = "0.4", default-features = false, features = ["clock"] }
fluxbee-sdk.workspace = true
io-common = { path = "../common" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
