[package]
name = "io-test"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = "1.0"
uuid = { version = "1.7", features = ["v4"] }
nix = { version = "0.28", features = ["fs", "mman"] }
fluxbee-sdk = { path = "../../../crates/fluxbee_sdk" }
