[package]
name = "router-client"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
router-protocol = { path = "../router-protocol" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
